Attempted Fix for header background problem on iOS by creating fixed div element behind main content and using different sized images for responsive breakpoints. Adjusted more styling including video controls, map figure spans, and overlays for optimal mobile experience.

--- a/css/overlay.css
+++ b/css/overlay.css
@@ -13,6 +13,7 @@
 
 #overlay p, #overlay h3, #map-close {
   color: white;
+  -webkit-transition: all 0.3s ease 0s;
   transition: all 0.3s ease 0s;
   text-shadow: 1px 1px 1px black;
 }
@@ -27,12 +28,14 @@
 
 #close, #map-close {
   float: right;
-  padding: 5px 8px 4px 8px;
+  padding: 5px 8px 3px 8px;
   margin-right: 3%;
+  font-size: 1.5em;
   font-family: sans-serif;
   background-color: rgba(110, 51, 9, .8);
   border: 2px solid rgb(49, 150, 102);
   box-shadow: 2px 2px 8px black;
+  -webkit-transition: all 0.3s ease 0s;
   transition: all 0.3s ease 0s;
 }
 
@@ -54,15 +57,16 @@
 #next {
   float: right;
   padding-right: 5%;
-  margin: 0;
-  font-size: 3em;
 }
 
 #prev {
   float: left;
   padding-left: 5%;
+}
+
+#next, #prev {
   margin: 0;
-  font-size: 3em;
+  font-size: 4em;
 }
 
 /**** MAP SPECIFIC STUFF ****/
@@ -86,12 +90,13 @@
 
 /*For Map*/
 
-@media handheld and (max-width: 600px) {
+@media screen and (max-width: 700px) {
 
   #map-box {
     width: 100%;
     height: 100%;
     margin: 0;
+    border-radius: 0;
   }
 
 }
@@ -114,7 +119,6 @@
   #prev, #next {
     position: absolute;
     top: 45vh;
-    font-size: 3em;
   }
 
   #prev {
@@ -141,33 +145,38 @@
 
 }
 
-@media handheld and (orientation: landscape) and (max-width: 790px) {
+@media screen and (orientation: landscape) and (max-width: 790px) {
 
 #overlay {
   overflow: hidden;
 }
 
 #img-box {
-  height: 100vh;
+  max-height: 100vh;
   margin-top: 0;
+}
+
+#overlay img {
+  max-height: inherit;
+  margin: 0 auto;
 }
 
 #prev, #next {
   position: absolute;
   top: 38vh;
-  font-size: 3em;
 }
 
 #prev {
-  left: 5%;
+  left: 2%;
 }
 
 #next {
-  right: 5%;
+  right: 2%;
 }
 
 #close {
-  margin: 0;
+  position: absolute;
+  right: 1%;
 }
 
 #img-caption {
