--- a/css/responsive.css
+++ b/css/responsive.css
@@ -40,38 +40,67 @@
 /** Re-align Boxes in Primary section **/
 
     #figures {
-      flex-direction: row;
-      flex-wrap: wrap;
-      justify-content: space-between;
+      -webkit-box-orient: horizontal;
+      -webkit-box-direction: normal;
+          -ms-flex-direction: row;
+              flex-direction: row;
+      -ms-flex-wrap: wrap;
+          flex-wrap: wrap;
+      -webkit-box-pack: justify;
+          -ms-flex-pack: justify;
+              justify-content: space-between;
     }
 
     #figure-1 {
-      order: 1;
-      flex-basis: 48%;
+      -webkit-box-ordinal-group: 2;
+          -ms-flex-order: 1;
+              order: 1;
+      -ms-flex-preferred-size: 48%;
+          flex-basis: 48%;
     }
 
     #figure-2 {
-      order: 2;
-      flex-basis: 48%;
+      -webkit-box-ordinal-group: 3;
+          -ms-flex-order: 2;
+              order: 2;
+      -ms-flex-preferred-size: 48%;
+          flex-basis: 48%;
     }
 
     #figure-3 {
-      order: 3;
-      flex-basis: 100%;
+      -webkit-box-ordinal-group: 4;
+          -ms-flex-order: 3;
+              order: 3;
+      -ms-flex-preferred-size: 100%;
+          flex-basis: 100%;
     }
 
     #primary {
-      flex-direction: row;
-      flex-wrap: wrap;
-      justify-content: space-between;
+      -webkit-box-orient: horizontal;
+      -webkit-box-direction: normal;
+          -ms-flex-direction: row;
+              flex-direction: row;
+      -ms-flex-wrap: wrap;
+          flex-wrap: wrap;
+      -webkit-box-pack: justify;
+          -ms-flex-pack: justify;
+              justify-content: space-between;
     }
 
     #sidebar {
+      display: -webkit-box;
+      display: -ms-flexbox;
       display: flex;
-      flex-direction: row;
-      align-items: flex-start;
+      -webkit-box-orient: horizontal;
+      -webkit-box-direction: normal;
+          -ms-flex-direction: row;
+              flex-direction: row;
+      -webkit-box-align: start;
+          -ms-flex-align: start;
+              align-items: flex-start;
       padding: 0 2% 0 3%;
-      justify-content: space-around;
+      -ms-flex-pack: distribute;
+          justify-content: space-around;
     }
 
 
@@ -79,6 +108,11 @@
 }
 
 @media screen and (min-width: 790px) {
+
+  #backdrop {
+    background-image: url("../img/grandcanyonD3.jpg");
+    /*background-size: auto 100%;*/
+  }
 
   header {
     max-height: 560px;
@@ -104,42 +138,62 @@
 
   .container {
     margin: 0 auto;
-    flex-direction: row;
-    flex-wrap: wrap;
-    justify-content: space-between;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
   }
 
   #secondary {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
     font-size: .9em;
   }
 
   #figures {
-    flex-basis: 70%;
+    -ms-flex-preferred-size: 70%;
+        flex-basis: 70%;
   }
 
   .region {
-    flex-basis: 32%;
+    -ms-flex-preferred-size: 32%;
+        flex-basis: 32%;
   }
 
   h2 {
-    flex-basis: 100%;
+    -ms-flex-preferred-size: 100%;
+        flex-basis: 100%;
   }
 
   #sidebar {
-    flex-basis: 28%;
-    flex-direction: column;
+    -ms-flex-preferred-size: 28%;
+        flex-basis: 28%;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
     font-size: .9em;
   }
 
   #figure-1 {
-    flex-basis: 49%;
+    -ms-flex-preferred-size: 49%;
+        flex-basis: 49%;
   }
 
   #figure-2 {
-    flex-basis: 49%;
+    -ms-flex-preferred-size: 49%;
+        flex-basis: 49%;
   }
 
   ul, ol {
@@ -150,7 +204,8 @@
 
 /* Re-widen list line spacing to fill expanding sidebar */
   aside li {
-    line-height: 1.7;
+    line-height: 1.6;
+    font-size: 1em;
   }
 
 #social-group {
@@ -177,15 +232,18 @@ footer {
 @media screen and (min-width: 900px) {
 
   #figures {
-    flex-basis: 69%;
+    -ms-flex-preferred-size: 69%;
+        flex-basis: 69%;
   }
 
   #figure-1 {
-    flex-basis: 48%;
+    -ms-flex-preferred-size: 48%;
+        flex-basis: 48%;
   }
 
   #figure-2 {
-    flex-basis: 48%;
+    -ms-flex-preferred-size: 48%;
+        flex-basis: 48%;
   }
 
   .container {
@@ -204,9 +262,13 @@ footer {
     margin-bottom: 95px;
   }
 
+  aside li {
+    line-height: 1.7;
+  }
+
 }
 
-@media screen and (min-width: 1075px) {
+@media screen and (min-width: 1024px) {
 
   header {
     padding-top: 70px;
@@ -222,7 +284,8 @@ footer {
   }
 
   .region {
-      flex-basis: 31%;
+      -ms-flex-preferred-size: 31%;
+          flex-basis: 31%;
       font-size: 1.1em;
     }
 
@@ -232,6 +295,11 @@ footer {
 
   #copyright {
     margin-right: 8%;
+  }
+
+  #backdrop {
+    background-image: url("../img/grandcanyonD.jpg");
+    background-size: 100% auto;
   }
 
 }
